2000-06-05  Shugo Maeda <shugo@ruby-lang.org>

	* pgg-gpg.el (pgg-scheme-insert-key): Don't quote user id.

2000-05-29  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-view-mailcap-files): New variable.
	(mime-view-mailcap-parsed-p): New variable.
	(mime-view-parse-mailcap-files): New function.
	(mime-view-parse-mailcap): New function.

2000-05-25  Tanaka Akira      <akr@m17n.org>

	* README.en: Update for CVS via SSH.

2000-05-23  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* semi-def.el (mime-create-widget-button): Avoid truncating
	extents.

2000-05-22  Katsumi Yamaoka   <yamaoka@jpl.org>

	* semi-def.el (mime-create-xpm-button): Define it if the feature
	`xpm' is provided even if the TTY frame is used; call
	`mime-create-widget-button' if the TTY frame is used.
	(mime-create-widget-button): Replace a string behind the widget
	button with the entity info; add comment about it.
	(mime-button-mouse-face): Refer to `widget-mouse-face' in doc.
	(mime-button-face): Refer to `widget-button-face' in doc.

2000-05-21   Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-process-region): Abolish redundant nconc.

2000-05-22  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el: Merge WEMY.
	* semi-def.el: Ditto.

	* mime-view.el (mime-preview-toggle-button): Force hiding
	a button when condition is 'hide.
	(mime-preview-buttonize): Don't toggle button.
	(mime-preview-unbuttonize): Ditto.

	* semi-def.el (mime-use-widget): New variable.

2000-05-17  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* EMY 1.13.6 is released.

2000-05-16   Daiki Ueno  <ueno@unixuser.org>

	* mime-image.el (mime-image-create) [XEmacs]: Don't call
	`make-image-instance' directly.

2000-05-16  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-edit.el (mime-edit-mime-version-field-for-message/partial):
	Remove mime-edit-version.
	(mime-edit-message-default-max-lines): Increment to 5000.
	(mime-edit-split-and-send):
	(mime-edit-exit):
	Shut up byte compiler.
